# bigspender

./: BigSpender.hs  README.md  bigspender.cabal  flake.nix  hie.yaml
BigSpender/: Dinge.hs  Genehmigung.hs  Spesenkonto.hs
