cabal-version:       2.4
name:                bigspender
version:             0.1.0.0
license:             NONE
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  build-depends:       QuickCheck,
                       base,
                       containers,
                       mtl,
                       parallel,
                       sqlite-simple,
                       text,
                       polysemy, polysemy-plugin,
                       HasBigDecimal,
                       time

  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: BigSpender
