cabal-version:       2.4
name:                bigspender
version:             0.1.0.0
license:             Apache-2.0
author:              Mike Sperber
maintainer:          michael.sperber@active-group.de

library
  build-depends:       QuickCheck,
                       base,
                       containers,
                       HasBigDecimal,
                       time

  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: BigSpender.Dinge
                   BigSpender.Genehmigung
                   BigSpender.Spesenkonto
